When space key is pressed, move the car every 16 milliseconds #3

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Driving Game</title>
 </head>
 <body>
-  <div>
+  <div class="path">
     <img src="/images/car.png" alt="car">
   </div>
   <script src="main.js"></script>
